--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,98 @@
 .header {
-  padding: 20px 0;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
+
 .nav {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  flex-wrap: nowrap;
 }
+
+.nav-logo-icon {
+  transition: transform 0.2s ease;
+}
+.nav-logo-icon:hover {
+  transform: scale(1.05);
+}
+
+.header-item {
+  height: 18px;
+  font-size: 14px;
+  line-height: 129%;
+  text-transform: uppercase;
+}
+
+.header-item,
+.header-address-link,
+.header-soc-icon {
+  color: white;
+}
+
 .nav-logo {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  margin-right: 60px;
+}
+
+.header-list {
+  display: flex;
+  gap: 25px;
+  margin-right: 286px;
+}
+
+.header-item {
+  list-style: none;
+  transition: transform 0.2s ease;
+}
+
+.header-item:hover {
+  transform: scale(1.05);
+  color: #ecd979;
+}
+
+.header-soc-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 12px;
+}
+
+.header-soc-link:hover {
+  transform: scale(1.05);
+  background-color: #ecd979;
+}
+
+.header-soc-link {
+  background-color: white;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  border-radius: 15px;
+  padding: 8px;
+  width: 44px;
+  height: 44px;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+
+.header-address {
+  margin-right: 20px;
+  font-size: 14px;
+  line-height: 143%;
+  text-transform: uppercase;
+  font-style: normal;
 }
-.nav-link {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+
+.header-address {
+  transition: transform 0.2s ease;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+
+.header-address:hover {
+  transform: scale(1.05);
 }
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
-}
-.nav-link.active::after {
-  background: #747bff;
+.header-address-link:hover {
+  transform: scale(1.05);
+  color: #ecd979;
 }
