--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,72 @@
 <header class="header">
-  <div class="container">
+  <div
+    class="container container-header"
+    data-aos="fade-down"
+    data-aos-delay="300"
+    data-aos-duration="2000"
+    data-aos-easing="ease-in-out"
+  >
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
+        <svg class="nav-logo-icon" width="44" height="39">
+          <use href="../public/symbol-defs.svg#icon-logo-1"></use>
         </svg>
       </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+      <ul class="header-list">
+        <li class="header-item">
+          <a class="header-a" href="#about us">About us</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+        <li class="header-item">
+          <a class="header-a" href="#our collection ">Our collection </a>
+        </li>
+        <li class="header-item">
+          <a class="header-a" href="#customer order">CUSTOMER ORDER</a>
+        </li>
+        <li class="header-item">
+          <a class="header-a" href="#testimonials">TEstimonials</a>
+        </li>
+      </ul>
+      <address class="header-address">
+        <a class="header-address-link" href="tel:+380684439426"
+          >+380 (68) 443-94-26</a
+        >
+      </address>
+      <ul class="header-soc-list">
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="header-soc-icon" width="28" height="28">
+              <use href="../public/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="header-soc-icon" width="28" height="28">
+              <use href="../public/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="header-soc-icon" width="28" height="28">
+              <use href="../public/symbol-defs.svg#icon-youtube"></use>
+            </svg>
+          </a>
         </li>
       </ul>
     </nav>
