--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <svg class="nav-logo-icon" width="44" height="39">
-          <use href="../public/symbol-defs.svg#icon-logo-1"></use>
+          <use href="./public/symbol-defs.svg#icon-logo-1"></use>
         </svg>
       </a>
       <ul class="header-list">
@@ -40,7 +40,7 @@
             rel="noopener noreferrer"
           >
             <svg class="header-soc-icon" width="28" height="28">
-              <use href="../public/symbol-defs.svg#icon-facebook"></use>
+              <use href="./public/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -52,7 +52,7 @@
             rel="noopener noreferrer"
           >
             <svg class="header-soc-icon" width="28" height="28">
-              <use href="../public/symbol-defs.svg#icon-instagram"></use>
+              <use href="./public/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -64,7 +64,7 @@
             rel="noopener noreferrer"
           >
             <svg class="header-soc-icon" width="28" height="28">
-              <use href="../public/symbol-defs.svg#icon-youtube"></use>
+              <use href="./public/symbol-defs.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
