--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
     <picture class="hero-img">
       <source srcset="/img/girl-1x.jpg 1x, /img/girl-2x.jpg 2x" />
       <img
-        class=""
+        class="hero-card"
         src="/img/girl-1x.jpg"
         alt="Ukrainian embroidery"
         width="392"
