--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,45 @@
 .footer {
-  padding: 20px 0;
+  border-top: 1px solid rgba(252, 249, 249, 0.1);
+  background-image: url(../img/elementss-1x.png);
+  background-repeat: no-repeat;
+  background-size: 500px 363px;
+  background-position: 200% calc(50% + 20px);
+  background-position: calc(50% - 720px) 306px;
+  background-position: calc(50% + 465px) calc(50%);
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
-.footer-desc {
-  text-align: center;
+
+@media screen and (min-resolution: 2dppx),
+  (min-resolution: 192dpi),
+  (-webkit-min-device-pixel-ration: 2) {
+  .footer {
+    background-image: url(../img/elementss-2x.png);
+  }
 }
-.footer-link {
-  position: relative;
+
+.footer-nav-list {
+  display: flex;
+  font-size: 14px;
+  line-height: 129%;
+  text-transform: uppercase;
+  color: white;
+  gap: 25px;
+  margin-bottom: 117px;
 }
-.footer-link::before {
-  content: '';
-  position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
+
+.footer-nav-items {
+  transition: transform 0.2s ease;
+}
+
+.footer-nav-items:hover {
+  transform: scale(1.05);
+  color: #ecd979;
+}
+
+.footer-slogan {
+  font-size: 64px;
+  line-height: 116%;
+  letter-spacing: -0.03em;
+  color: white;
 }
