--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,4 +12,9 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./about-us.css');
+@import url('./collection.css');
+@import url('./card-content.css');
+@import url('./order.css');
+@import url('./testimonials.css');
 @import url('./footer.css');
