--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,13 +14,13 @@
       </a>
       <ul class="header-list">
         <li class="header-item">
-          <a class="header-a" href="#about us">About us</a>
+          <a class="header-a" href="#about-us">About us</a>
         </li>
         <li class="header-item">
-          <a class="header-a" href="#our collection ">Our collection </a>
+          <a class="header-a" href="#collection ">Our collection </a>
         </li>
         <li class="header-item">
-          <a class="header-a" href="#customer order">CUSTOMER ORDER</a>
+          <a class="header-a" href="#order">CUSTOMER ORDER</a>
         </li>
         <li class="header-item">
           <a class="header-a" href="#testimonials">TEstimonials</a>
