--- a/src/partials/collection.html
+++ b/src/partials/collection.html
@@ -12,13 +12,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-60-1x.jpg 1x, ../img/image-60-2x.jpg 2x"
+              srcset="/img/image-60-1x.jpg 1x, /img/image-60-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-60-1x.jpg"
+              src="/img/image-60-1x.jpg"
               alt="Ukrainian embroidery"
             />
           </picture>
@@ -36,13 +36,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-61-1x.jpg 1x, ../img/image-61-2x.jpg 2x"
+              srcset="/img/image-61-1x.jpg 1x, /img/image-61-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-61-1x.jpg"
+              src="/img/image-61-1x.jpg"
               alt="Ukrainian embroidery"
             />
           </picture>
@@ -60,13 +60,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-62-1x.jpg 1x, ../img/image-62-2x.jpg 2x"
+              srcset="/img/image-62-1x.jpg 1x, /img/image-62-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-62-1x.jpg"
+              src="/img/image-62-1x.jpg"
               alt="Ukrainian embroidery"
             />
           </picture>
@@ -84,13 +84,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-63-1x.jpg 1x, ../img/image-63-2x.jpg 2x"
+              srcset="/img/image-63-1x.jpg 1x, /img/image-63-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-63-1x.jpg"
+              src="/img/image-63-1x.jpg"
               alt="Men's shirt"
             />
           </picture>
@@ -108,13 +108,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-64-1x.jpg 1x, ../img/image-64-2x.jpg 2x"
+              srcset="/img/image-64-1x.jpg 1x, /img/image-64-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-64-1x.jpg"
+              src="/img/image-64-1x.jpg"
               alt="Men's shirt"
             />
           </picture>
@@ -132,13 +132,13 @@
         <div class="collection-card">
           <picture class="collection-picture">
             <source
-              srcset="../img/image-65-1x.jpg 1x, ../img/image-65-2x.jpg 2x"
+              srcset="/img/image-65-1x.jpg 1x, /img/image-65-2x.jpg 2x"
               width="400"
               height="430"
             />
             <img
               class="collection-img"
-              src="../img/image-65-1x.jpg"
+              src="/img/image-65-1x.jpg"
               alt="Men's shirt"
             />
           </picture>
