--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -11,8 +11,8 @@
       >
         <img
           class="revius-foto"
-          srcset="../img/Ellipse-2x.png 2x"
-          src="../img/Ellipse-1x.png"
+          srcset="/img/Ellipse-2x.png 2x"
+          src="/img/Ellipse-1x.png"
           alt="Maria foto"
           width="64"
           height="64"
@@ -34,8 +34,8 @@
       >
         <img
           class="revius-foto"
-          srcset="../img/Ellipse-1-2x.png 2x"
-          src="../img/Ellipse-1-1x.png"
+          srcset="/img/Ellipse-1-2x.png 2x"
+          src="/img/Ellipse-1-1x.png"
           alt="Sergey foto"
           width="64"
           height="64"
@@ -57,8 +57,8 @@
       >
         <img
           class="revius-foto"
-          srcset="../img/Ellipse-2-2x.png 2x"
-          src="../img/Ellipse-2-1x.png"
+          srcset="/img/Ellipse-2-2x.png 2x"
+          src="/img/Ellipse-2-1x.png"
           alt="Natalia foto"
           width="64"
           height="64"
