--- a/src/css/card-content.css
+++ b/src/css/card-content.css
@@ -1,7 +1,7 @@
 .card-content {
   width: 1440px;
   height: 776px;
-  background-image: url(../img/Image-1x.jpg);
+  background-image: url(/img/Image-1x.jpg);
   background-repeat: no-repeat;
 }
 
@@ -9,6 +9,6 @@
   (min-resolution: 192dpi),
   (-webkit-min-device-pixel-ration: 2) {
   .about-us {
-    background-image: url(../img/Image-2x.jpg);
+    background-image: url(/img/Image-2x.jpg);
   }
 }
