--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -34,13 +34,13 @@
     >
       <picture class="about-us-picture">
         <source
-          srcset="../img/girl-and-boy-1x.jpg 1x, ../img/girl-and-boy-2x.jpg 2x"
+          srcset="/img/girl-and-boy-1x.jpg 1x, /img/girl-and-boy-2x.jpg 2x"
           width="709"
           height="545"
         />
         <img
           class="about-us-img"
-          src="../img/girl-and-boy-1x.jpg"
+          src="/img/girl-and-boy-1x.jpg"
           alt="Ukrainian embroidery"
         />
       </picture>
