--- a/src/partials/order.html
+++ b/src/partials/order.html
@@ -10,15 +10,15 @@
       <picture class="order-picture">
         <source
           srcset="
-            ../img/Rectangle-42481-1x.jpg 1x,
-            ../img/Rectangle-42481-2x.jpg 2x
+            /img/Rectangle-42481-1x.jpg 1x,
+            /img/Rectangle-42481-2x.jpg 2x
           "
           width="524"
           height="521"
         />
         <img
           class="order-img"
-          src="../img/Rectangle-42481-1x.jpg"
+          src="/img/Rectangle-42481-1x.jpg"
           alt="Ukrainian embroidery"
         />
       </picture>
