--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,6 +26,7 @@
           <a class="header-a" href="#testimonials">TEstimonials</a>
         </li>
       </ul>
+
       <address class="header-address">
         <a class="header-address-link" href="tel:+380684439426"
           >+380 (68) 443-94-26</a
@@ -40,7 +41,7 @@
             rel="noopener noreferrer"
           >
             <svg class="header-soc-icon" width="28" height="28">
-              <use href="/symbol-defs.svg#icon-facebook"></use>
+              <use class="soc-icon" href="/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -69,6 +70,15 @@
           </a>
         </li>
       </ul>
+      <button
+        class="icon-paragraph-right"
+        href="./index.html"
+        aria-label="Site logo"
+      >
+        <svg class="nav-logo-icon" width="32" height="32">
+          <use href="/symbol-defs-1.svg#icon-paragraph-right"></use>
+        </svg>
+      </button>
     </nav>
   </div>
 </header>
