--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -49,7 +49,7 @@
         </p>
       </li>
       <li
-        class="revius-item revius-hide-phone revius-hide-ipad"
+        class="revius-item revius-hide-ipad"
         data-aos="flip-up"
         data-aos-delay="500"
         data-aos-duration="2000"
