--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,6 +18,7 @@
 
 .footer-nav-list {
   display: flex;
+  flex-wrap: wrap;
   font-size: 14px;
   line-height: 129%;
   text-transform: uppercase;
@@ -40,4 +41,17 @@
   line-height: 116%;
   letter-spacing: -0.03em;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    background-position: calc(50% + 135px) 50%;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    background-size: 500px 363px;
+    background-position: calc(50% + 465px) calc(50%);
+  }
 }
