--- a/src/css/order.css
+++ b/src/css/order.css
@@ -1,6 +1,6 @@
 .order {
-  padding-top: 150px;
-  padding-bottom: 75px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-size: 325px 484px;
   background-image: url(/img/elements-1-1x.png);
   background-repeat: no-repeat;
@@ -17,12 +17,13 @@
 
 .container-order {
   display: flex;
+  flex-direction: column;
 }
 
 .order-photo-block {
   border-radius: 4px;
   overflow: hidden;
-  margin-right: 50px;
+  margin-bottom: 80px;
 }
 
 .order-img {
@@ -40,7 +41,6 @@
   line-height: 132%;
   letter-spacing: -0.03em;
   color: white;
-  width: 666px;
   margin-bottom: 40px;
 }
 
@@ -58,7 +58,7 @@
   border: 1px solid rgba(252, 249, 249, 0.1);
   border-radius: 15px;
   padding: 14px 16px;
-  width: 508px;
+  width: 335px;
   height: 47px;
   color: #fcf9f9;
   background-color: transparent;
@@ -123,4 +123,39 @@
   transform: scale(1.05);
   color: #ecd979;
   border: 1px solid #ecd979;
+}
+
+@media screen and (min-width: 768px) {
+  .order {
+    background-size: 325px 484px;
+    background-position: calc(50% - 720px) 606px;
+  }
+
+  .order-title {
+    width: 666px;
+  }
+
+  .form-info {
+    width: 508px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .order {
+    padding-top: 75px;
+    padding-bottom: 75px;
+    background-size: 325px 484px;
+    background-position: calc(50% - 720px) 306px;
+  }
+
+  .container-order {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .order-img {
+    width: 524px;
+    height: 521px;
+    margin-right: 50px;
+  }
 }
