--- a/src/css/container.css
+++ b/src/css/container.css
@@ -3,12 +3,14 @@
   min-width: 320px;
   max-width: 375px;
   padding: 0 20px;
+  margin: 0 auto;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
     padding: 0 32px;
+    margin: 0 auto;
   }
 }
 /* Styles for Desktop devices */
@@ -16,5 +18,6 @@
   .container {
     max-width: 1440px;
     padding: 0 100px;
+    margin: 0 auto;
   }
 }
