--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -74,6 +74,7 @@
         class="icon-paragraph-right"
         href="./index.html"
         aria-label="Site logo"
+        data-modal-open
       >
         <svg class="nav-logo-icon" width="32" height="32">
           <use href="/symbol-defs-1.svg#icon-paragraph-right"></use>
